@@ -1,0 +1,12 @@
+system type		: SGI Indy
+processor		: 0
+cpu model		: R4000SC V3.0  FPU V0.0
+BogoMIPS		: 49.86
+byteorder		: big endian
+wait instruction	: no
+microsecond timers	: yes
+tlb_entries		: 48
+extra interrupt vector	: no
+hardware watchpoint	: yes
+VCED exceptions		: 741282316
+VCEI exceptions		: 66661638
