@@ -1,0 +1,11 @@
+system type		: MQ Pro
+processor		: 0
+cpu model		: R5000 V4.0  FPU V1.0
+BogoMIPS		: 249.85
+wait instruction	: yes
+microsecond timers	: yes
+tlb_entries		: 48
+extra interrupt vector	: no
+hardware watchpoint	: no
+VCED exceptions		: not available
+VCEI exceptions		: not available
